--- a/scripts/todo
+++ b/scripts/todo
@@ -7,7 +7,7 @@ TODO_FILE = File.join(ENV['HOME'], 'Desktop', 'todo.yml')
 def first_depth_count(hash)
   total = 0
   hash.each do |value|
-    total += value.count
+    total += value[1].count
   end
   total
 end
